--- a/index.html
+++ b/index.html
@@ -1,13 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
     <script src="./script.js" defer></script>
     <title>Calculator</title>
+    <link rel="icon" href="https://cdn-icons-png.freepik.com/512/3139/3139031.png" type="image/x-icon">
 </head>
+
 <body>
-    
+    <div class="calculatorBody">
+        <div class="calculatorDisplay">
+            <div id="displayOutput">2 + 2 = 4</div>
+            <button id="clear">Clear</button>
+        </div>
+
+        <div class="calculatorButtons">
+            <div class="calculatorNumberButtons">
+                <button class="number">7</button>
+                <button class="number">8</button>
+                <button class="number">9</button>
+                <button class="number">4</button>
+                <button class="number">5</button>
+                <button class="number">6</button>
+                <button class="number">1</button>
+                <button class="number">2</button>
+                <button class="number">3</button>
+                <button class="number">0</button>
+                <button class="number">.</button>
+            </div>
+
+            <div class="calculatorOperatorButtons">
+                <button class="operator">÷</button>
+                <button class="operator">x</button>
+                <button class="operator">-</button>
+                <button class="operator">+</button>
+                <button class="operator">=</button>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
