--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="calculatorBody">
         <div class="calculatorDisplay">
-            <div id="displayOutput">2 + 2 = 4</div>
+            <div id="displayOutput"></div>
             <button id="clear">Clear</button>
         </div>
 
