--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <button class="operator">x</button>
                 <button class="operator">-</button>
                 <button class="operator">+</button>
-                <button class="operator">=</button>
+                <button class="operator" id="equals">=</button>
             </div>
         </div>
     </div>
