--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <button class="number">2</button>
                 <button class="number">3</button>
                 <button class="number">0</button>
-                <button class="number">.</button>
+                <button class="number" id="decimal">.</button>
             </div>
 
             <div class="calculatorOperatorButtons">
